--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,9 @@
 Source: purity
 Section: games
 Priority: optional
-Maintainer: Duncan Findlay <duncf@rogers.com>
+Maintainer: Duncan Findlay <duncf@debian.org>
 Build-Depends: debhelper (>> 3.0.0)
-Standards-Version: 3.5.2
+Standards-Version: 3.5.7
 
 Package: purity
 Architecture: any
