--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: purity
 Section: games
 Priority: optional
-Maintainer: Duncan Findlay <duncf@debian.org>
+Maintainer: Debian QA Group <packages@qa.debian.org>
 Build-Depends: debhelper (>> 3.0.0)
 Standards-Version: 3.5.7
 
