--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: purity
 Section: games
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
-Build-Depends: debhelper (>> 3.0.0)
+Build-Depends: debhelper (>> 7)
 Standards-Version: 3.5.7
 
 Package: purity
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Automated purity testing software.
  For many years now, the purity test, (in various forms)
  has been widely available on the net.
